Implementado login con Google para evaluar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="mostrar_resultado_aqui">MOSTRAR RESULTADO AQUI</string>
     <string name="excelente_servicio">Excelente servicio!!!</string>
     <string name="nombre_del_que_publica_el_aviso_aqui">NOMBRE DEL QUE PUBLICA EL AVISO AQUI</string>
+    <string name="foto_usuario">foto usuario</string>
+    <string name="user_name_here">USER NAME HERE</string>
 </resources>
