Corregido para que solo admita una evaluacion de cada aviso por usuario y detalles de presentación de las estrellas.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="nombre_del_que_publica_el_aviso_aqui">NOMBRE DEL QUE PUBLICA EL AVISO AQUI</string>
     <string name="foto_usuario">foto usuario</string>
     <string name="user_name_here">USER NAME HERE</string>
+    <string name="ya_evaluaste_este_servicio">YA EVALUASTE ESTE SERVICIO</string>
 </resources>
